specs static pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  csgo: "Counter Strike : Globale Offensive"
+  lol: "League of Legends"
+  sc2: "Starcraft 2"
+  hs: "Hearthstone"
+  
+  
