--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,4 +26,7 @@ en:
   sc2: "Starcraft 2"
   hs: "Hearthstone"
   
-  
+  infolan: "Présentation de la LAN"
+  infolieu: "Où ?"
+  infodate: "Quand ?"
+  infomoyen: "Comment ?"
