--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,35 +24,35 @@ en:
 
   csgo: 
     name: "Counter Strike : Globale Offensive" 
-    regles: "TEST REGLES"
+    regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs ordinateurs munis de leurs accessoires (chargeurs, souris...) et un câble RJ45 (câblage droit) d'une longueur de 3 mètres minimum. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash Prize de 5000 euros à répartir entre les 3 premiers."
-    inscription: "TEST INSCRIPTIONS"
-    arbre: "TEST ARBRE"
+    inscription: "TEXTE INSCRIPTIONS"
+    arbre: "TEXTE ARBRE"
 
   lol: 
     name: "League of Legends"
-    regles: "TEST REGLES"
+    regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs ordinateurs munis de leurs accessoires (chargeurs, souris...) et un câble RJ45 (câblage droit) d'une longueur de 3 mètres minimum. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash prize de 2000 euros à répartir entre les 3 premiers."
-    inscription: "TEST INSCRIPTIONS"
-    arbre: "TEST ARBRE"
+    inscription: "TEXTE INSCRIPTIONS"
+    arbre: "TEXTE ARBRE"
 
   sc2: 
     name: "Starcraft 2"
-    regles: "TEST REGLES"
+    regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs périphériques de jeux : clavier, casque et souris. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash prize de 2000 euros à répartir entre les 3 premiers."
-    inscription: "TEST INSCRIPTIONS"
-    arbre: "TEST ARBRE"
+    inscription: "TEXTE INSCRIPTIONS"
+    arbre: "TEXTE ARBRE"
  
   hs: 
     name: "Hearthstone"
-    regles: "TEST REGLES"
+    regles: "TEXTE REGLES"
     materiel: "Les joueurs inscrits pour le tournois Hearthstone n’auront pas besoin de matériel. Tout joueur doit respecter le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash Prize de 1000 euros à répartir entre les 3 premiers."
-    inscription: "TEST INSCRIPTIONS"
-    arbre: "TEST ARBRE"
+    inscription: "TEXTE INSCRIPTIONS"
+    arbre: "TEXTE ARBRE"
 
   
   regles: "Règles"
@@ -66,6 +66,12 @@ en:
   infodate: "Quand ?"
   infomoyen: "Comment ?"
 
-  egs: "Ensiie Game Show"
-  egc: "Evry Games City"
+  egs:
+    name: "Ensiie Games Show"
+    presentation: "L’ENSIIE Game Show était à l’origine un projet scolaire réalisé par des étudiants de l’ENSIIE, école d’ingénieurs en informatique située à Evry. Le but était alors d’organiser un tournoi de jeux vidéo à l’époque Warcraft 3 et Counter-Strike entre école d’ingénieurs, afin d’élire au cours d’une compétition offline le meilleur joueur-élève ingénieur de France. L’idée a été reprise par le club de jeux vidéo de l’école, et c’est donc l’association LanPartIIE qui s’est chargée de l’organisation du tournoi pendant plusieurs années. Le concept a légèrement évolué et nous proposons désormais à des joueurs de toute la France de s’affronter sur CS : GO, Starcraft 2, LoL ou Heathstone."
+  egc: 
+    name: "Evry Games City"
+    presentation: "TEXTE PRESENTATION"
 
+
+  lorem: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam volutpat dolor sit amet diam fringilla, nec facilisis neque faucibus. Ut rutrum porttitor ligula quis mollis. Donec nibh nunc, consequat viverra sem in, tincidunt ultrices diam. Maecenas finibus mattis iaculis. Nam tortor ante, commodo non nisl sit amet, ultrices convallis eros. Donec faucibus odio gravida libero accumsan laoreet. Integer elementum scelerisque nisi, ut vestibulum felis ultricies et. Ut dapibus lacus est, vel sodales lacus tincidunt eu. Sed tempus feugiat ante. Sed semper, neque vel vehicula aliquet, tellus ante accumsan ipsum, vestibulum fermentum ante nisi sed massa. Pellentesque tempus dolor vitae suscipit pharetra. Donec lobortis massa lectus, non egestas elit vestibulum eget. Suspendisse eleifend pharetra sollicitudin. Nam auctor odio sed sapien interdum consequat. Mauris faucibus ex in nisl accumsan cursus. Vivamus condimentum non nulla nec consequat. Aliquam quis varius quam, non semper quam. Morbi velit nisi, egestas at convallis in, facilisis at mauris."
