--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,11 +60,34 @@ en:
   recompenses: "Récompenses"
   inscription: "Inscription"
   arbre: "Arbre du tournoi"
+
   
-  infolan: "Présentation de la LAN"
-  infolieu: "Où ?"
-  infodate: "Quand ?"
-  infomoyen: "Comment ?"
+  infolan: 
+    name: "Présentation de la LAN"
+    text: "Les 23 et 24 Avril prochain aura lieu la première édition d’Evry Game City. Ce nouvel évènement a pour but de rassembler les gamers de tout bord autour de leur passion commune : les Jeux Vidéos ! 4 tournois différents seront organisés sur 4 jeux : Counter Strike : Global Offensive, League of Legends, Starcraft 2 et Hearthstone. 10 000 euros de cash prize seront distribués entre les vainqueurs de chaque tournoi, avec également de nombreuses dotations matérielles pour les autres compétiteurs."
+    text2: "Les spectateurs ne seront pas oubliés, avec des lots et des goddies à gagner durant l’évènement et une soirée spéciale organisée le samedi soir. Vous pourrez participer à de nombreux concours, accéder à des consoles en libre accès ou tout simplement vous balader dans la ville d’Evry à la découverte des nombreux ateliers mis en place autour des jeux vidéos."
+
+  infolieu:
+    name: "Où ?"
+    text: "Adresse : Place Agora, 91000 Évry."
+
+  infodate:
+    name: "Quand ?"
+    text: "Le 23 – 24 Avril 2015 de 09h à 00h le Samedi et le Dimanche."
+
+  infomoyen:
+    name: "Comment ?"
+    rerd:
+      title: "Par le RER D :"
+      text: "Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil – Malesherbes station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes)."
+    route: 
+      title: "Par la route"
+      text: "A6 depuis Paris : direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe. Autobus TICE : arrêt Gare SNCF ou Agora"
+
+  infoprix:
+    name: "Combien ?"
+    text: "En prévente : 15E par personne"
+    text2: "Sur place : 17E par personne"
 
   egs:
     name: "Ensiie Games Show"
