--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,16 +97,19 @@ en:
 
   infolieu:
     name: "Où ?"
+    logo: "Where.png"
     text: "Adresse : Arènes de l'Agora, 91000 Évry."
-    mosaique-text: "Arènes de l'Agora, Évry"
+    mosaique-text: "Arènes de l'Agora, 91000 Évry"
 
   infodate:
     name: "Quand ?"
+    logo: "When.png"
     text: "Le 25 – 26 Avril 2015 de 09h à 00h le Samedi et le Dimanche."
-    mosaique-text: "25-26 Avril 2015"
+    mosaique-text: "Samedi et dimanche 25-26 Avril 2015"
 
   infomoyen:
     name: "Comment ?"
+    logo: "HOW.png"
     rerd:
       title: "Par le RER D :"
       text: "Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil – Malesherbes station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes)."
@@ -117,6 +120,7 @@ en:
 
   infoprix:
     name: "Combien ?"
+    logo: "money.png"
     text: "En prévente : 15€ par personne"
     text2: "Sur place : 17€ par personne"
     mosaique-text: "Prévente: 15€ - Sur place 17€"
