instagram logo + newtablinks

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -157,9 +157,9 @@ en:
     url: "http://www.ensiie.fr/"
 
   partenaire-2:
-    name: "Ensiie Games Show"
-    image: "Partenaires_LOGOS_EGC.png"
-    url: "http://www.ensiiegameshow.com/"
+    name: "BDE ENSIIE"
+    image: "Partenaires_LOGOS_BDE.png"
+    url: "http://bde.iiens.net/web/"
 
   partenaire-3:
     name: "Ville d'Évry"
