jeux renamed en tournois, et nouvelles bannieres

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,7 +47,7 @@ en:
 # Jeux #
 ########
   csgo: 
-    name: "Counter Strike : Globale Offensive" 
+    name: "Counter Strike : Global Offensive" 
     regles: "TEXTE REGLES"
     materiel: "Les joueurs doivent amener leurs ordinateurs munis de leurs accessoires (chargeurs, souris...) et un câble RJ45 (câblage droit) d'une longueur de 3 mètres minimum. Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement."
     recompenses: "Cash Prize de 5000 euros à répartir entre les 3 premiers."
