titres mosaiques infos

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,19 +96,19 @@ en:
     text2: "Les spectateurs ne seront pas oubliés, avec des lots et des goddies à gagner durant l’évènement et une soirée spéciale organisée le samedi soir. Vous pourrez participer à de nombreux concours, accéder à des consoles en libre accès ou tout simplement vous balader dans la ville d’Evry à la découverte des nombreux ateliers mis en place autour des jeux vidéos."
 
   infolieu:
-    name: "Ou ?"
+    name: "LIEU"
     logo: "Where.png"
     text: "Adresse : Arènes de l'Agora, 91000 Évry."
     mosaique-text: "Arènes de l'Agora, 91000 Évry"
 
   infodate:
-    name: "Quand ?"
+    name: "DATE"
     logo: "When.png"
     text: "Le 25 – 26 Avril 2015 de 09h à 00h le Samedi et le Dimanche."
     mosaique-text: "Samedi et dimanche 25-26 Avril 2015"
 
   infomoyen:
-    name: "Comment ?"
+    name: "ACCES"
     logo: "HOW.png"
     rerd:
       title: "Par le RER D :"
@@ -119,7 +119,7 @@ en:
     mosaique-text: "RER D, Francilienne, Bus TICE"
 
   infoprix:
-    name: "Combien ?"
+    name: "TARIFS"
     logo: "money.png"
     text: "En prévente : 15€ par personne"
     text2: "Sur place : 17€ par personne"
