titres de box en majuscule

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,15 +27,15 @@ en:
 # Titres #
 ##########
   home: "Home"
-  regles: "Règles"
-  materiel: "Materiel"
-  recompenses: "Récompenses"
+  regles: "REGLES"
+  materiel: "MATERIEL"
+  recompenses: "RECOMPENSES"
   inscription: "Inscription"
   arbre: "Arbre du tournoi"
-  presentation: "Présentation"
+  presentation: "PRESENTATION"
   lequipe: "L'équipe"
   contact: "Contacts"
-  nouscontacter: "Nous contacter"
+  nouscontacter: "NOUS CONTACTER"
   informations: "Informations"
   infopratiques: "Informations pratiques"
   partenaires: "Partenaires"
