logo ville d'evry

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,7 +160,7 @@ en:
 
   partenaire-3:
     name: "Ville d'Évry"
-    image: "Partenaires_LOGOS_EVRY.png"
+    image: "Partenaires_LOGOS_EVRY_bis.png"
     url: "http://www.evry.fr/"
 
   partenaire-4:
@@ -180,7 +180,7 @@ en:
 
   partenaire-7:
     name: "Ville d'Évry"
-    image: "Partenaires_LOGOS_EVRY.png"
+    image: "Partenaires_LOGOS_EVRY_bis.png"
     url: "http://www.evry.fr/"
 
 
