partenaires+= jcdecaux et capdigital

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -154,7 +154,7 @@ en:
     image: "Partenaires_LOGOS_ENSIIE_copy.png"
     url: "http://www.ensiie.fr/"
 
-  partenaire-4:
+  partenaire-6:
     name: "BDE ENSIIE"
     image: "Partenaires_LOGOS_BDE.png"
     url: "http://bde.iiens.net/web/"
@@ -169,19 +169,14 @@ en:
     image: "Partenaires_LOGOS_mastersJV_2.png"
     url: "http://www.mastersjeuvideo.org/"
 
+  partenaire-4:
+    name: "JCDecaux"
+    image: "Partenaires_LOGOS_JCDecaux.png"
+    url: "http://www.jcdecaux.fr/"
+
   partenaire-5:
-    name: "ENSIIE"
-    image: "Partenaires_LOGOS_ENSIIE_copy.png"
-    url: "http://www.ensiie.fr/"
-
-  partenaire-6:
-    name: "BDE ENSIIE"
-    image: "Partenaires_LOGOS_BDE.png"
-    url: "http://bde.iiens.net/web/"
-
-  partenaire-7:
-    name: "Ville d'Évry"
-    image: "Partenaires_LOGOS_EVRY_bis.png"
-    url: "http://www.evry.fr/"
+    name: "Cap-Digital"
+    image: "Partenaires_LOGOS_capdigital.png"
+    url: "http://www.capdigital.com/"
 
 
