--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,12 +159,12 @@ en:
     image: "Partenaires_LOGOS_EVRY_bis.png"
     url: "http://www.evry.fr/"
 
-  partenaire-6:
+  partenaire-8:
     name: "Masters du Jeu Vidéo"
     image: "Partenaires_LOGOS_mastersJV_2.png"
     url: "http://www.mastersjeuvideo.org/"
 
-  partenaire-10:
+  partenaire-5:
     name: "JCDecaux"
     image: "Partenaires_LOGOS_JCDecaux.png"
     url: "http://www.jcdecaux.fr/"
@@ -174,32 +174,38 @@ en:
     image: "Partenaires_LOGOS_capdigital.png"
     url: "http://www.capdigital.com/"
 
-  partenaire-3:
+  partenaire-6:
     name: "joypad"
     image: "Partenaires_LOGOS_joypad.png"
     url: "http://joypad.fr"
 
-  partenaire-7:
+  partenaire-10:
     name: "BEGEEK"
     image: "Partenaires_LOGOS_begeek.png"
     url: "http://www.begeek.fr/"
 
-  partenaire-8:
+  partenaire-7:
     name: "AFJV"
     image: "Partenaires_LOGOS_afjv.png"
     url: "http://www.afjv.com/"
 
-  partenaire-9:
+  partenaire-11:
     name: "Gameblog"
     image: "Partenaires_LOGOS_gameblog.png"
     url: "http://www.gameblog.fr/"
 
-  partenaire-5:
+  partenaire-3:
     name: "Xbox"
     image: "Partenaires_LOGOS_xbox.png"
     url: "http://www.xbox.com/"
 
-  partenaire-11:
+  partenaire-9:
+    name: "evry2"
+    image: "Partenaires_LOGOS_evry2.png"
+    url: "http://www.evry2.com/"
+
+
+  partenaire-12:
     name: "BDE ENSIIE"
     image: "Partenaires_LOGOS_BDE.png"
     url: "http://bde.iiens.net/web/"
