--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -162,24 +162,24 @@ en:
 
 
   partenaire-3:
+    name: "Sony PS4"
+    image: "Partenaires_LOGOS_sonyps4.png"
+    url: "https://www.playstation.com/"
+
+  partenaire-4:
+    name: "Game One"
+    image: "Partenaires_LOGOS_gameone.png"
+    url: "http://www.gameone.net/"
+
+  partenaire-5:
+    name: "Konami"
+    image: "Partenaires_LOGOS_konami.png"
+    url: "https://www.konami.com/"
+
+  partenaire-6:
     name: "Xbox"
     image: "Partenaires_LOGOS_xbox.png"
     url: "http://www.xbox.com/"
-
-  partenaire-4:
-    name: "Cap-Digital"
-    image: "Partenaires_LOGOS_capdigital.png"
-    url: "http://www.capdigital.com/"
-
-  partenaire-5:
-    name: "JCDecaux"
-    image: "Partenaires_LOGOS_JCDecaux.png"
-    url: "http://www.jcdecaux.fr/"
-
-  partenaire-6:
-    name: "joypad"
-    image: "Partenaires_LOGOS_joypad.png"
-    url: "http://joypad.fr"
 
   partenaire-7:
     name: "Bandai Namco"
@@ -187,65 +187,69 @@ en:
     url: "http://www.bandainamcogames.com/"
 
   partenaire-8:
+    name: "joypad"
+    image: "Partenaires_LOGOS_joypad.png"
+    url: "http://joypad.fr"
+
+  partenaire-9:
     name: "Capcom"
     image: "Partenaires_LOGOS_capcom.png"
     url: "http://www.capcom.com/"
 
-  partenaire-9:
+  partenaire-10:
+    name: "Cap-Digital"
+    image: "Partenaires_LOGOS_capdigital.png"
+    url: "http://www.capdigital.com/"
+
+  partenaire-11:
+    name: "AFJV"
+    image: "Partenaires_LOGOS_afjv.png"
+    url: "http://www.afjv.com/"
+ 
+  partenaire-12:
     name: "Capital Games"
     image: "Partenaires_LOGOS_capitalgames.png"
     url: "http://capital-games.org/"
 
-  partenaire-10:
-    name: "Game One"
-    image: "Partenaires_LOGOS_gameone.png"
-    url: "http://www.gameone.net/"
-
-  partenaire-11:
-    name: "Konami"
-    image: "Partenaires_LOGOS_konami.png"
-    url: "https://www.konami.com/"
-
-  partenaire-12:
-    name: "Sony PS4"
-    image: "Partenaires_LOGOS_sonyps4.png"
-    url: "https://www.playstation.com/"
-
-
-
   partenaire-13:
-    name: "AFJV"
-    image: "Partenaires_LOGOS_afjv.png"
-    url: "http://www.afjv.com/"
-
-  partenaire-14:
-    name: "Masters du Jeu Vidéo"
-    image: "Partenaires_LOGOS_mastersJV_2.png"
-    url: "http://www.mastersjeuvideo.org/"
-
-  partenaire-15:
-    name: "evry2"
-    image: "Partenaires_LOGOS_evry2.png"
-    url: "http://www.evry2.com/"
-
-  partenaire-16:
-    name: "Fireworks Command Ship"
-    image: "Partenaires_LOGOS_fcs.png"
-    url: "http://www.fireworkscommandship.com/"
-
-  partenaire-17:
     name: "Respect Zone"
     image: "Partenaires_LOGOS_respectzone.png"
     url: "http://respectzone.org/fr/"
 
+  partenaire-14:
+    name: "Société Générale"
+    image: "Partenaires_LOGOS_societegenerale.png"
+    url: "https://www.societegenerale.fr/"
 
+  partenaire-15:
+    name: "JCDecaux"
+    image: "Partenaires_LOGOS_JCDecaux.png"
+    url: "http://www.jcdecaux.fr/"
+
+
+
+  partenaire-16:
+    name: "evry2"
+    image: "Partenaires_LOGOS_evry2.png"
+    url: "http://www.evry2.com/"
+
+  partenaire-17:
+    name: "Fireworks Command Ship"
+    image: "Partenaires_LOGOS_fcs.png"
+    url: "http://www.fireworkscommandship.com/"
 
   partenaire-18:
+    name: "Masters du Jeu Vidéo"
+    image: "Partenaires_LOGOS_mastersJV_2.png"
+    url: "http://www.mastersjeuvideo.org/"
+
+
+  partenaire-19:
     name: "BEGEEK"
     image: "Partenaires_LOGOS_begeek.png"
     url: "http://www.begeek.fr/"
 
-  partenaire-19:
+  partenaire-20:
     name: "Gameblog"
     image: "Partenaires_LOGOS_gameblog.png"
     url: "http://www.gameblog.fr/"
