--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,113 +159,117 @@ en:
     image: "Partenaires_LOGOS_EVRY_bis.png"
     url: "http://www.evry.fr/"
 
-
-
   partenaire-3:
+    name: "Agglomération d'Évry"
+    image: "Partenaires_LOGOS_aggloevry.png"
+    url: "http://www.agglo-evry.fr/"
+
+
+  partenaire-4:
     name: "Sony PS4"
     image: "Partenaires_LOGOS_sonyps4.png"
     url: "https://www.playstation.com/"
 
-  partenaire-4:
+  partenaire-5:
     name: "Virgin Radio"
     image: "Partenaires_LOGOS_virginradio.png"
     url: "http://www.virginradio.fr/"
 
-  partenaire-5:
+  partenaire-6:
     name: "Game One"
     image: "Partenaires_LOGOS_gameone.png"
     url: "http://www.gameone.net/"
 
-  partenaire-6:
+  partenaire-7:
     name: "Konami"
     image: "Partenaires_LOGOS_konami.png"
     url: "https://www.konami.com/"
 
-  partenaire-7:
+  partenaire-8:
     name: "Xbox"
     image: "Partenaires_LOGOS_xbox.png"
     url: "http://www.xbox.com/"
 
-  partenaire-8:
+  partenaire-9:
     name: "Roccat"
     image: "Partenaires_LOGOS_roccat.png"
     url: "http://www.roccat.org/"
 
-  partenaire-9:
+  partenaire-10:
     name: "Bandai Namco"
     image: "Partenaires_LOGOS_bandainamco.png"
     url: "http://www.bandainamcogames.com/"
 
-  partenaire-10:
+  partenaire-11:
     name: "joypad"
     image: "Partenaires_LOGOS_joypad.png"
     url: "http://joypad.fr"
 
-  partenaire-11:
+  partenaire-12:
     name: "Capcom"
     image: "Partenaires_LOGOS_capcom.png"
     url: "http://www.capcom.com/"
 
-  partenaire-12:
+  partenaire-13:
     name: "Cap-Digital"
     image: "Partenaires_LOGOS_capdigital.png"
     url: "http://www.capdigital.com/"
 
-  partenaire-13:
+  partenaire-14:
     name: "AFJV"
     image: "Partenaires_LOGOS_afjv.png"
     url: "http://www.afjv.com/"
  
-  partenaire-14:
+  partenaire-15:
     name: "Capital Games"
     image: "Partenaires_LOGOS_capitalgames.png"
     url: "http://capital-games.org/"
 
-  partenaire-15:
+  partenaire-16:
     name: "Respect Zone"
     image: "Partenaires_LOGOS_respectzone.png"
     url: "http://respectzone.org/fr/"
 
-  partenaire-16:
+  partenaire-17:
     name: "Société Générale"
     image: "Partenaires_LOGOS_societegenerale.png"
     url: "https://www.societegenerale.fr/"
 
-  partenaire-17:
+  partenaire-18:
     name: "JCDecaux"
     image: "Partenaires_LOGOS_JCDecaux.png"
     url: "http://www.jcdecaux.fr/"
 
-  partenaire-18:
+  partenaire-19:
     name: "Warner games"
     image: "Partenaires_LOGOS_warner.png"
     url: "http://www.warnerbros.com/"
 
 
 
-  partenaire-19:
+  partenaire-20:
     name: "evry2"
     image: "Partenaires_LOGOS_evry2.png"
     url: "http://www.evry2.com/"
 
-  partenaire-20:
+  partenaire-21:
     name: "Fireworks Command Ship"
     image: "Partenaires_LOGOS_fcs.png"
     url: "http://www.fireworkscommandship.com/"
 
-  partenaire-21:
+  partenaire-22:
     name: "Masters du Jeu Vidéo"
     image: "Partenaires_LOGOS_mastersJV_2.png"
     url: "http://www.mastersjeuvideo.org/"
 
 
 
-  partenaire-22:
+  partenaire-23:
     name: "BEGEEK"
     image: "Partenaires_LOGOS_begeek.png"
     url: "http://www.begeek.fr/"
 
-  partenaire-23:
+  partenaire-24:
     name: "Gameblog"
     image: "Partenaires_LOGOS_gameblog.png"
     url: "http://www.gameblog.fr/"
