--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -279,6 +279,10 @@ en:
     image: "Partenaires_LOGOS_gameblog.png"
     url: "http://www.gameblog.fr/"
 
+  partenaire-26:
+    name: "Melty"
+    image: "Partenaires_LOGOS_melty.png"
+    url: "http://www.melty.fr/"
 
 
 
