etudiant de paris

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -288,7 +288,7 @@ en:
     url: "http://www.eclypsia.com/"
 
   partenaire-28:
-    name: "L'étudiant"
+    name: "Etudiant de Paris"
     image: "Partenaires_LOGOS_letudiant.png"
     url: "http://www.etudiantdeparis.fr/"
 
